--- a/spotify.html
+++ b/spotify.html
@@ -59,7 +59,7 @@
                         <h2>Sidhu Moose Wala<br><span>Artist</span></h2>
                     </div>
                     <div class="artist">
-                        <img src="badshah.jpeg" alt="">
+                        <img src="assets/badshah.jpeg" alt="">
                         <h2>Badshah<br><span>Artist</span></h2>
                     </div>
                     <div class="artist">
@@ -113,7 +113,7 @@
                             <div class="album-1st-text">
                                 <h5>Yo Yo Honey Singh Albums</h5>
                             </div>
-                            <div class="album-1st-play"><img src="play.png" alt="" class="image-of-play"></div>
+                            <div class="album-1st-play"><img src="assets/play.png" alt="" class="image-of-play"></div>
                         </button>
                         <button class="album-1st">
                             <div class="album-1st-img"><img
@@ -122,7 +122,7 @@
                             <div class="album-1st-text">
                                 <h5>Shubh Albums</h5>
                             </div>
-                            <div class="album-1st-play"><img src="play.png" alt="" class="image-of-play"></div>
+                            <div class="album-1st-play"><img src="assets/play.png" alt="" class="image-of-play"></div>
                         </button>
                         <button class="album-1st">
                             <div class="album-1st-img"><img
@@ -131,23 +131,23 @@
                             <div class="album-1st-text">
                                 <h5>Sidhu Moose Wala Albums</h5>
                             </div>
-                            <div class="album-1st-play"><img src="play.png" alt="" class="image-of-play"></div>
+                            <div class="album-1st-play"><img src="assets/play.png" alt="" class="image-of-play"></div>
                         </button>
                         <button class="album-1st">
                             <div class="album-1st-img"><img
-                                    src="AP.jpg"
+                                    src="assets/AP.jpg"
                                     alt="" class=""></div>
                             <div class="album-1st-text">
                                 <h5>AP Dhillon Albums</h5>
                             </div>
-                            <div class="album-1st-play"><img src="play.png" alt="" class="image-of-play"></div>
+                            <div class="album-1st-play"><img src="assets/play.png" alt="" class="image-of-play"></div>
                         </button>
                         <button class="album-1st">
-                            <div class="album-1st-img"><img src="badshah.jpeg" alt="" class=""></div>
+                            <div class="album-1st-img"><img src="assets/badshah.jpeg" alt="" class=""></div>
                             <div class="album-1st-text">
                                 <h5>Badshah Albums</h5>
                             </div>
-                            <div class="album-1st-play"><img src="play.png" alt="" class="image-of-play"></div>
+                            <div class="album-1st-play"><img src="assets/play.png" alt="" class="image-of-play"></div>
                         </button>
                     </div>
 
@@ -157,123 +157,123 @@
                 </div>
                 <div class="right-bottom-bottom">
                     <div class="card imgcard">
-                        <img class="cardimg" src="softly.jpg">
+                        <img class="cardimg" src="assets/softly.jpg">
                         <div class="play">
                             <div class="play-name">
                                 <h4>Softly</h4>
                                 <h5>Karan Aujla</h5>
                             </div>
-                            <img src="play.png" alt="" class="image-play imgcard">
+                            <img src="assets/play.png" alt="" class="image-play imgcard">
                         </div>
                     </div>
                     <div class="card">
-                        <img class="cardimg" src="dope.jpg" alt="">
+                        <img class="cardimg" src="assets/dope.jpg" alt="">
                         <div class="play">
                             <div class="play-name">
                                 <h4>Dope Shope</h4>
                                 <h5>Yo YO honey Singh</h5>
                             </div>
-                            <img src="play.png" alt="" class="image-play">
+                            <img src="assets/play.png" alt="" class="image-play">
                         </div>
                     </div>
                     <div class="card">
-                        <img class="cardimg" src="last.jpg" alt="">
+                        <img class="cardimg" src="assets/last.jpg" alt="">
                         <div class="play">
                             <div class="play-name">
                                 <h4>THE Last Ride</h4>
                                 <h5>Sidhu Moose Wala</h5>
                             </div>
-                            <img src="play.png" alt="" class="image-play">
+                            <img src="assets/play.png" alt="" class="image-play">
                         </div>
                     </div>
                     <div class="card">
-                        <img class="cardimg" src="munde.jpg" alt="">
+                        <img class="cardimg" src="assets/munde.jpg" alt="">
                         <div class="play">
                             <div class="play-name">
                                 <h4>Brown Munde</h4>
                                 <h5>AP Dhillon</h5>
                             </div>
-                            <img src="play.png" alt="" class="image-play">
+                            <img src="assets/play.png" alt="" class="image-play">
                         </div>
                     </div>
                     <div class="card">
-                        <img class="cardimg" src="koina.jpg" alt="">
+                        <img class="cardimg" src="assets/koina.jpg" alt="">
                         <div class="play">
                             <div class="play-name">
                                 <h4>Koi Na</h4>
                                 <h5>Badshah</h5>
                             </div>
-                            <img src="play.png" alt="" class="image-play">
+                            <img src="assets/play.png" alt="" class="image-play">
                         </div>
                     </div>
                     <div class="card">
-                        <img class="cardimg" src="cheques.jpg" alt="">
+                        <img class="cardimg" src="assets/cheques.jpg" alt="">
                         <div class="play">
                             <div class="play-name">
                                 <h4>Cheques</h4>
                                 <h5>Shubh</h5>
                             </div>
-                            <img src="play.png" alt="" class="image-play">
+                            <img src="assets/play.png" alt="" class="image-play">
                         </div>
                     </div>
                     <div class="card">
-                        <img class="cardimg" src="bhabi.webp" alt="">
+                        <img class="cardimg" src="assets/bhabi.webp" alt="">
                         <div class="play">
                             <div class="play-name">
                                 <h4>BHABI</h4>
                                 <h5>Mankirt Aulakh</h5>
                             </div>
-                            <img src="play.png" alt="" class="image-play">
+                            <img src="assets/play.png" alt="" class="image-play">
                         </div>
                     </div>
                     <div class="card">
-                        <img class="cardimg" src="case.jpg" alt="">
+                        <img class="cardimg" src="assets/case.jpg" alt="">
                         <div class="play">
                             <div class="play-name">
                                 <h4>CASE</h4>
                                 <h5>Deljit Dosanjh</h5>
                             </div>
-                            <img src="play.png" alt="" class="image-play">
+                            <img src="assets/play.png" alt="" class="image-play">
                         </div>
                     </div>
                     <div class="card">
-                        <img class="cardimg" src="jass.jpg" alt="">
+                        <img class="cardimg" src="assets/jass.jpg" alt="">
                         <div class="play">
                             <div class="play-name">
                                 <h4>No Competition</h4>
                                 <h5>Jass Manak</h5>
                             </div>
-                            <img src="play.png" alt="" class="image-play">
+                            <img src="assets/play.png" alt="" class="image-play">
                         </div>
                     </div>
                     <div class="card">
-                        <img class="cardimg" src="company.jpg" alt="">
+                        <img class="cardimg" src="assets/company.jpg" alt="">
                         <div class="play">
                             <div class="play-name">
                                 <h4>Company</h4>
                                 <h5>Emimay Bantai</h5>
                             </div>
-                            <img src="play.png" alt="" class="image-play">
+                            <img src="assets/play.png" alt="" class="image-play">
                         </div>
                     </div>
                     <div class="card">
-                        <img class="cardimg" src="kaya.webp" alt="">
+                        <img class="cardimg" src="assets/kaya.webp" alt="">
                         <div class="play">
                             <div class="play-name">
                                 <h4>Kaya Baat Ay</h4>
                                 <h5>Hardy Sandhu</h5>
                             </div>
-                            <img src="play.png" alt="" class="image-play">
+                            <img src="assets/play.png" alt="" class="image-play">
                         </div>
                     </div>
                     <div class="card">
-                        <img class="cardimg" src="majha.jpg" alt="">
+                        <img class="cardimg" src="assets/majha.jpg" alt="">
                         <div class="play">
                             <div class="play-name">
                                 <h4>Majha Block</h4>
                                 <h5>Prem Dhillon</h5>
                             </div>
-                            <img src="play.png" alt="" class="image-play">
+                            <img src="assets/play.png" alt="" class="image-play">
                         </div>
                     </div>
                 </div>
