--- a/index2.html
+++ b/index2.html
@@ -24,8 +24,8 @@
         <label for="Password">Password:</label>
             <input type="password" id="Password" name="Password" placeholder="Password" required>
             </div>
-            <div class="submit">
-                <a href="index.html">Log In</a>
+            <div class="submit" id="btn" >
+                <a href="index.html" id="link">Log In</a>
             </div>
             <div class="options">
                 <a href="#"><span>Forgot your password?</span></a>
@@ -39,7 +39,7 @@
             <h6>This site is protected by reCAPTCHA and the Google Privacy Policy and Terms of Service apply.</h6>
         </div>
     </footer>
-
+<script src="script.js"></script>
 </body>
 
 </html>
