--- a/index2.html
+++ b/index2.html
@@ -25,7 +25,7 @@
             <input type="password" id="Password" name="Password" placeholder="Password" required>
             </div>
             <div class="submit" id="btn" >
-                <a href="index.html" id="link">Log In</a>
+                <a id="link">Log In</a>
             </div>
             <div class="options">
                 <a href="#"><span>Forgot your password?</span></a>
