--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                             <div class="album-1st-text">
                                 <h5>Karan Aujla Albums</h5>
                             </div>
-                            <div class="album-1st-play"><img src="play.png" alt="" class="image-of-play"></div>
+                            <div class="album-1st-play"><img src="assets/play.png" alt="" class="image-of-play"></div>
                         </button>
                         <button class="album-1st">
                             <div class="album-1st-img"><img
