--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <div class="main">
         <div class="left">
             <div class="left-top">
+                <div class="imag">
+                    <img src="assets/spotify.webp">
+                </div>
                 <button>
                     <i class="ri-home-fill"></i>
                     <p>Home</p>
