--- a/index3.html
+++ b/index3.html
@@ -15,22 +15,21 @@
     </div>
     <div class="form-container">
         <div class="log">
-            <h1>Log in to Spotify</h1>
+            <h1>Sign up to start<br>listening </h1>
         </div>
         <form id="myForm" action="#" method="post">
             <div class="form">
-            <label for="Email or Username">Email or Username:</label>
-            <input type="text" id="Email or Username" name="Email or Username" placeholder="Email or Username" required>
-        <label for="Password">Password:</label>
-            <input type="password" id="Password" name="Password" placeholder="Password" required>
+            <label for="Email address">Email address:</label>
+            <input type="text" id="Email address" name="Email address" placeholder="Email address" required>
+        <label for="Password">Create a Password:</label>
+            <input type="password" id="Password" name="Password" placeholder="Create a strong password" required>
             </div>
             <div class="submit" id="btn" >
-                <a id="link">Log In</a>
+                <a>Sign Up</a>
             </div>
             <div class="options">
-                <a href="#"><span>Forgot your password?</span></a>
                 <hr>
-                <a href="index3.html">Don't have an account? <span>Sign up for Spotify</span></a>
+                <a href="index2.html">Already have an account? <span>Login in here</span></a>
             </div>      
         </form>
     </div>
@@ -39,7 +38,6 @@
             <h6>This site is protected by reCAPTCHA and the Google Privacy Policy and Terms of Service apply.</h6>
         </div>
     </footer>
-<script src="script.js"></script>
 </body>
 
 </html>
